styles.css
@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap');

/*===============
 GLOBAL SELECTORS
 ================*/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    min-width: 1300px;
}

a {
    text-decoration: none;
    color: inherit;
}

main {
    padding: 5rem 10rem;
    font-family: 'Josefin Sans', sans-serif;
}


/*========== 
HEADER STYLE
============ */

header {
    height: 100%;
    background: url(images/desktop//image-hero.jpg) no-repeat;
    background-size: cover;
    background-color: hsl(0, 0%, 55%);
    background-blend-mode: multiply;
    padding: 5rem 10rem;
}

.heading-box {
    border: 3px solid white;
    padding: 3rem;
    margin-top: 8rem;
    width: 40rem;
}

h1 {
    text-transform: uppercase;
    color: white;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 4.5rem;
    font-weight: 300;
}

/*======= 
NAV STYLE
=========  */

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: 'Alata', sans-serif;
    color: white;
    font-size: 1.2rem;
}

nav ul {
    list-style-type: none;
    display: flex;
    justify-content: space-evenly;

}

nav ul li {
    padding: 1rem;
    position: relative;
}

.nav-link::after {
    content: '';
    position: absolute;
    display: block;
    width: 0%;
    height: 2px;
    bottom: 5px;
    left: 0px;
    background-color: white;
    transition: 0.5s;

}

/*=========== 
ABOUT SECTION
============= */

#about {
    margin-top: 2rem;
    margin-bottom: 15rem;
}

.image-interactive {
    width: 100%;
    position: relative;
}

.image-interactive img {
    min-width: 50%;
    object-fit: cover;
}

.caption {
    width: 40%;
    position: absolute;
    top: 17rem;
    left: 40rem;
    padding-top: 4rem;
    padding-left: 4rem;
    padding-bottom: 2rem;
    background-color: white;
}


.caption h2 {
    text-transform: uppercase;
    font-size: 3rem;
    font-weight: 300;
    margin-bottom: 2rem;
}

.caption p {
    line-height: 1.5;
}

/*===============
CREATIONS SECTION
=================  */

#creations {
    margin: 3rem auto;
}

.heading-creations {
    display: flex;
    justify-content: space-between;
}

.heading-creations h2 {
    text-transform: uppercase;
    font-size: 3rem;
    font-weight: 300;
}

.see-all {
    background-color: black;
    color: white;
    font-size: 1.3rem;
    text-transform: uppercase;
    padding: 1rem 2rem;
    letter-spacing: 4px;
    border: 2px solid black;
}

.see-all-mobile {
    display: none;
}

.grid-cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    margin: 5rem auto;
    gap: 2rem;
}

.grid-item {
    color: white;
    padding: 2rem;
    display: flex;
    align-self: stretch;
    aspect-ratio: 1/2;

}

.grid-item h3 {
    font-size: 2rem;
    font-weight: 300;
    align-self: flex-end;

}

.grid-item1 {
    background: url(images/desktop/image-deep-earth.jpg) no-repeat;
    background-size: cover;
}

.grid-item2 {
    background: url(images/desktop/image-night-arcade.jpg) no-repeat;
    background-size: cover;
}

.grid-item3 {
    background: url(images/desktop//image-soccer-team.jpg) no-repeat;
    background-size: cover;
}

.grid-item4 {
    background: url(images/desktop/image-grid.jpg) no-repeat;
    background-size: cover;
}

.grid-item5 {
    background: url(images/desktop/image-from-above.jpg) no-repeat;
    background-size: cover;
}

.grid-item6 {
    background: url(images/desktop/image-pocket-borealis.jpg) no-repeat;
    background-size: cover;
}

.grid-item7 {
    background: url(images/desktop/image-curiosity.jpg) no-repeat;
    background-size: cover;
}

.grid-item8 {
    background: url(images/desktop/image-fisheye.jpg) no-repeat;
    background-size: cover;
}


/*========== 
FOOTER STYLE
============  */

footer {
    height: 15vh;
    background-color: black;
    color: white;
    padding: 2rem 10rem;
    font-family: 'Alata', sans-serif;
    display: flex;
    justify-content: space-between;
}

.footer-left {
    width: 30%;
}

.footer-right {
    width: 30%;
}

.social-media {
    display: flex;
    justify-content: end;
    margin-bottom: 1.2rem;
}

.footer-logo {
    display: block;
    margin-bottom: 1rem;
}

.social-media-link {
    margin-left: 1rem;
}

footer p {
    text-align: end;
    color: hsl(0, 0%, 41%)
}

footer ul {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    margin-bottom: 1rem;
}

/*=========== 
ACTIVE STATES
=============  */

.nav-link:hover::after {
    width: 100%;
}

.grid-item:hover {
    cursor: pointer;
    color: black;
    background-color: hsl(0, 0%, 55%);
    background-blend-mode: lighten;
}

.heading-creations a:hover {
    background-color: white;
    color: black;
}

.mobile-image {
    display: none;
}

.ham-menu {
    border: none;
    background-color: transparent;
    display: none;
}

@media (max-width: 1300px) {
    body {
        min-width: 270px;
        max-width: 1300px;
        width: 100%;
    }

    main {
        padding: 2rem;
    }

    header {
        padding: 2rem;
        height: 100vh;
        background: url(images/mobile/image-hero.jpg) no-repeat;
        background-size: cover;
    }

    .heading-box {
        margin-top: 10rem;
        width: 100%;
        padding: 2rem 1rem;
    }

    h1 {
        font-size: 2.5rem;
    }

    /*=========== 
    ABOUT SECTION
    =============  */

    #about {
        margin-bottom: 6rem;
    }

    .image-interactive img {
        width: 100%;
    }

    .caption {
        position: static;
        width: 100%;
        padding: 1.5rem 0;
    }

    .caption h2 {
        margin: 2rem 0;
        font-size: 2rem;
        text-align: center;
    }

    .caption p {
        text-align: center;
    }

    /*=======================
     CREATIONS MOBILE SECTION
     ========================  */

    .heading-creations {
        display: block;
    }

    .heading-creations h2 {
        font-size: 2rem;
        text-align: center;
    }

    .grid-cards {
        grid-template-columns: 1fr;
        height: auto;
    }

    .grid-item {
        aspect-ratio: auto;
        padding: 2rem 4rem;
    }

    .grid-item1 {
        background: url(images/mobile/image-deep-earth.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item2 {
        background: url(images/mobile/image-night-arcade.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item3 {
        background: url(images/mobile/image-soccer-team.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item4 {
        background: url(images/mobile/image-grid.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item5 {
        background: url(images/mobile/image-from-above.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item6 {
        background: url(images/mobile/image-pocket-borealis.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item7 {
        background: url(images/mobile/image-curiosity.jpg) no-repeat;
        background-size: cover;
    }

    .grid-item8 {
        background: url(images/mobile/image-fisheye.jpg) no-repeat;
        background-size: cover;
    }

    .see-all-mobile {
        width: fit-content;
        display: block;
        margin: 0 auto;
        background-color: black;
        color: white;
        font-size: 1.3rem;
        text-transform: uppercase;
        padding: 1rem 2rem;
        letter-spacing: 4px;
        border: 2px solid black;
    }


    /*============ 
    FOOTER SECTION
    ==============  */

    footer {
        height: auto;
        padding: 2rem;
        flex-direction: column;
        justify-content: center;
    }

    .footer-left {
        width: 100%;
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
    }

    footer ul {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    footer ul li {
        margin: .7rem 0;
    }

    .footer-logo {
        display: block;
        margin: 0;
    }

    .footer-right {
        width: 100%;

    }

    .social-media {
        justify-content: center;
    }

    .footer-right p {
        text-align: center;
    }


    .ham-menu {
        display: block;
    }

    .desktop-image {
        display: none;
    }

    .mobile-image {
        display: block;
        max-width: 100%;
    }


    .desktop-menu {
        display: none;
    }

    /*================= 
    MOBILE HAMBURGER MENU 
    ==================== */

    nav {
        display: block;
    }

    .mobile-menu {
        display: block;
        position: fixed;
        height: 100vh;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
        background-color: black;
        color: white;
        z-index: 5;
        padding: 2rem;
    }

    .mobile-nav-logo {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 4rem;
    }

    .mobile-menu ul {
        display: flex;
        flex-direction: column;
        font-family: 'Josefin Sans', sans-serif;
    }

    .mobile-menu ul li {
        padding: 1rem 0;
        font-size: 2rem;
    }


    .logo-btn {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .btn-close {
        border: none;
        background-color: transparent;
    }
}

